netmaumau (0.15) UNRELEASED; urgency=low

  * amount of card decks configurable

 -- Heiko Schäfer <heiko@rangun.de>  Mon, 16 Feb 2015 09:53:07 +0100

netmaumau (0.14) UNRELEASED; urgency=low

  * fixed ai delay settings
  * improved AI

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 11 Feb 2015 05:48:13 +0100

netmaumau (0.13) UNRELEASED; urgency=low

  * direction change implemented

 -- Heiko Schäfer <heiko@rangun.de>  Tue, 03 Feb 2015 12:56:58 +0100

netmaumau (0.12) UNRELEASED; urgency=low

  * fixed Ace/King/Queen round bug, allowing to start the round at any time

 -- Heiko Schäfer <heiko@rangun.de>  Wed, 28 Jan 2015 13:00:38 +0100

netmaumau (0.11) UNRELEASED; urgency=low

  * improved AI opponent

 -- Heiko Schäfer <heiko@rangun.de>  Sun, 18 Jan 2015 09:29:01 +0100

netmaumau (0.10) UNRELEASED; urgency=low

  * installing links to ai_imgN.png for customizing AI images
  * added whitespace substitution for xinetd

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 15 Jan 2015 08:12:34 +0100

netmaumau (0.9) UNRELEASED; urgency=low

  * added sqlite database for collecting scores and other stats
  * added possibility to run via (x)inetd

 -- Heiko Schäfer <heiko@rangun.de>  Fri, 09 Jan 2015 06:13:50 +0100

netmaumau (0.8) UNRELEASED; urgency=low

  * implemented take card count on play card request
  * implemented https://github.com/velnias75/NetMauMau/issues/14

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 01 Jan 2015 16:06:55 +0100

netmaumau (0.7) UNRELEASED; urgency=low

  * implemented ace rounds

 -- Heiko Schäfer <heiko@rangun.de>  Sun, 21 Dec 2014 17:55:59 +0100

netmaumau (0.6) UNRELEASED; urgency=low

  * check if the player image is really a PNG image
  * improved test tools (for developing)
  * added dependency to libgsl0-dev

 -- Heiko Schäfer <heiko@rangun.de>  Thu, 18 Dec 2014 10:00:23 +0100

netmaumau (0.5) UNRELEASED; urgency=low

  * Fixed out of memory handling at picture upload
  * Fixed https://github.com/velnias75/NetMauMau-Qt-Client/issues/3