@@ -1,8 +1,9 @@
 netmaumau (0.15) UNRELEASED; urgency=low
 
   * amount of card decks configurable
+  * amount of initial cards configurable
 
- -- Heiko Schäfer <heiko@rangun.de>  Mon, 16 Feb 2015 09:53:07 +0100
+ -- Heiko Schäfer <heiko@rangun.de>  Mon, 16 Feb 2015 11:10:10 +0100
 
 netmaumau (0.14) UNRELEASED; urgency=low
 
